# ctgforge

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/ctgforge/: __init__.py  ctg.py
src/ctgforge/client/: ctg_client.py  httpx_client.py  requests_client.py
src/ctgforge/export/: __init__.py  dataframe.py  graph.py
src/ctgforge/flatten/: __init__.py  core.py
src/ctgforge/models/: core.py  provenance.py
src/ctgforge/query/: compiler.py  expr.py  fields.py  specs.py
tests/: test_clients.py  test_ctg.py  test_exports.py
tests/query/: test_compiler.py
