[project]
name = "ctgforge"
version = "0.2.2"
description = "Turn ClinicalTrials.gov v2 studies into analytics-ready DataFrames and knowledge graphs."
readme = "README.md"
authors = [
  { name = "littledumb", email = "jiamin@gmail.com" }
]
keywords = [
  "clinical trials",
  "clinicaltrials.gov",
  "biomedical data",
  "healthcare data",
  "bioinformatics",
  "knowledge graph",
  "dataframe",
  "clinical research",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Intended Audience :: Healthcare Industry",

  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",

  "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
requests = [
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx[socks]>=0.28.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[tool.ruff]
target-version = "py39"
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
ignore = [
  "E501",  # line too long
]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "B",  # bugbear
  "I",  # isort
  "UP", # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["ctgforge"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-s -q --cov=ctgforge --cov-report=term-missing"
